Initial Transcation functionality

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         />
                     </div>
                     <div class="form-control">
-                        <label for="amount"
-                            >Amount <br />
-                            (negative - expense, positive - income)</label
+                        <label for="amount" class="label-amount"
+                            >Amount : (negative value => expense, positive value
+                            => income)</label
                         >
                         <input
                             type="number"
